Changes to fix the illegal warnings with java 11